Revert "ICTS now has a rollback mechanism that stores previous ictQueue"
This reverts commit 8da7ada3f73bdd9de03e20ff96781e8423d4a692.